<resources>
    <string name="app_name">EventWithMe</string>

    <string name="login_activity_button_log_in">Log In</string>
    <string name="login_activity_hint_password">password</string>
    <string name="login_activity_button_sign_up">No account? Sign up</string>
    <string name="login_activity_hint_username">username/email</string>
    <string name="login_activity_content_desc_app_logo">App Logo</string>
    <string name="login_activity_error_empty_username_email">A username or email is required</string>
    <string name="login_activity_error_empty_password">A password is required</string>
    <string name="login_activity_error_invalid_credentials">Invalid username or password</string>
    <string name="login_activity_error_unknown">Unknown error logging in</string>

    <string name="signup_activity_hint_username">username</string>
    <string name="signup_activity_hint_display_name">name (first/last)</string>
    <string name="signup_activity_hint_email">email</string>
    <string name="signup_activity_hint_password">password</string>
    <string name="signup_activity_hint_confirm_password">confirm password</string>
    <string name="signup_activity_button_sign_up">Sign Up</string>
    <string name="signup_activity_button_log_in">Already have an account? Log In</string>
    <string name="signup_activity_error_empty_username">A username is required</string>
    <string name="signup_activity_error_empty_password">A password is required</string>
    <string name="signup_activity_error_username_taken">Username is taken</string>
    <string name="signup_activity_error_email_taken">Email already in use</string>
    <string name="signup_activity_error_invalid_email">Please enter a valid email address</string>
    <string name="signup_activity_error_unknown">Unknown error signing up</string>
    <string name="signup_activity_error_empty_email">An email is required</string>
    <string name="signup_activity_error_password_mismatch">Passwords do not match</string>

    <string name="event_detail_activity_button_rsvp">RSVP</string>
    <string name="event_detail_activity_type_label">Info: %s</string>
    <string name="event_detail_activity_venue_label">Venue : %s</string>
    <string name="event_detail_activity_content_desc_event_image">Event image</string>
    <string name="event_detail_activity_label_date">Date</string>
    <string name="event_detail_activity_label_venue">Venue</string>
    <string name="event_detail_activity_date_time_at">at</string>

    <string name="my_event_detail_activity_button_more_info">MORE INFO</string>
    <string name="my_event_detail_activity_button_rsvp">RSVP</string>
    <string name="my_event_detail_activity_button_cancel_rsvp">Cancel RSVP</string>
    <string name="my_event_detail_activity_content_desc_profile_picture">Profile picture</string>

    <string name="bottom_navigation_menu_search">Search</string>
    <string name="bottom_navigation_menu_stream">Stream</string>
    <string name="bottom_navigation_menu_rsvp">Favorites</string>
    <string name="bottom_navigation_menu_chat">Chat</string>
    <string name="bottom_navigation_menu_profile">Profile</string>

    <string name="toolbar_menu_settings_title">Settings</string>

    <string name="event_detail_activity_cancel_rsvp">Cancel RSVP</string>

    <string name="edit_profile_activity_profile_saved">Profile changes saved!</string>
    <string name="edit_profile_activity_toast_first_name_required">First name is required</string>
    <string name="edit_profile_activity_toast_last_name_required">Last name is required</string>
    <string name="edit_profile_activity_toast_email_required">Email is required</string>
    <string name="edit_profile_activity_toast_city_required">City is required</string>
    <string name="edit_profile_activity_toast_picture_saved">New profile pic saved</string>

    <string name="search_fragment_button_next">Next</string>
    <string name="search_fragment_label_select_category">Select Category</string>
    <string name="search_fragment_label_city_name">City Name</string>
    <string name="search_fragment_label_keyword">Keyword</string>
    <string name="search_fragment_content_desc_search">search</string>

    <string name="stream_fragment_button_search">Search</string>
    <string name="stream_fragment_button_back">Back</string>
    <string name="stream_fragment_spinner_event_type">Event Type</string>

    <string name="chat_fragment_button_send">Send</string>
    <string name="chat_fragment_text_hint_message">type a message</string>

    <string name="incoming_message_layout_content_desc_profile_picture">Profile Picture</string>

    <string name="outgoing_message_layout_content_desc_profile_picture">Your Profile Picture</string>

    <string name="profile_fragment_label_first_name">First name:</string>
    <string name="profile_fragment_label_last_name">Last name:</string>
    <string name="profile_fragment_label_email">Email:</string>
    <string name="profile_fragment_label_city">City:</string>
    <string name="profile_fragment_content_desc_edit_profile">Edit Profile</string>
    <string name="profile_fragment_button_edit_password">Edit Password</string>
    <string name="profile_fragment_button_logout">Logout</string>
    <string name="profile_fragment_content_desc_profile_picture">Profile picture</string>
    <string name="profile_fragment_label_events">Events</string>
    <string name="profile_fragment_label_following">Following</string>
    <string name="profile_fragment_label_followers">Followers</string>
    <string name="profile_fragment_label_no_bio">User has not set a bio!</string>

    <string name="edit_profile_activity_content_desc_profile_picture">Profile Picture</string>
    <string name="edit_profile_activity_hint_email">Email</string>
    <string name="edit_profile_activity_hint_first_name">First Name</string>
    <string name="edit_profile_activity_hint_last_name">Last Name</string>
    <string name="edit_profile_activity_hint_city">City</string>
    <string name="edit_profile_activity_button_save_changes">Save Changes</string>
    <string name="edit_profile_activity_content_desc_edit_profile_picture">Edit Profile Picture</string>

    <string name="event_card_layout_content_desc_event">Event Image</string>

    <string name="event_card_with_chat_layout_content_desc_event">Event Image</string>
    <string name="event_card_with_chat_layout_button_chat">Chat</string>

    <string name="password_change_activity_hint_current_password">Current Password</string>
    <string name="password_change_activity_hint_new_password">New Password</string>
    <string name="password_change_activity_hint_confirm_new_password">Confirm New Password</string>
    <string name="password_change_activity_button_save_password">Save Password</string>
    <string name="password_change_activity_error_password_mismatch">Passwords do not match</string>
    <string name="password_change_activity_error_empty_current_password">Current password is required</string>
    <string name="password_change_activity_error_empty_new_password">Password is required</string>
    <string name="password_change_activity_error_password_requirements">Password does not meet password requirements</string>
    <string name="password_change_activity_error_password_incorrect">Password is incorrect</string>

    <string name="image_chooser_popup_label_choices">Take a new photo or access gallery?</string>
    <string name="image_chooser_popup_button_camera">Camera</string>
    <string name="image_chooser_popup_button_gallery">Gallery</string>
    <string name="edit_profile_activity_hint_bio">Bio</string>
    <string name="password_change_activity_error_unknown">Unknown error updating password</string>
    <string name="password_change_activity_toast_success">Password changed successfully!</string>
    <string name="signup_activity_hint_city">city</string>
    <string name="gmap_key">AIzaSyBsIph2bE1JAqVIQq5cM3LIcNzNUyG7ZP8</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="password_requirements">Password Requirements:\n\t- 8 to 20 characters long\n\t- at least one upper case character\n\t- at least one symbol\n\t- at least one digit</string>
    <string name="signup_activity_error_username_space">Username cannot contain a space</string>

</resources>