<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/get_location"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/bottom_navigation_menu_search"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_stream"
        android:icon="@android:drawable/ic_menu_compass"
        android:title="@string/bottom_navigation_menu_stream"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_rsvp"
        android:icon="@drawable/ic_favorites"
        android:title="@string/bottom_navigation_menu_rsvp"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_profile"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/bottom_navigation_menu_profile"
        app:showAsAction="ifRoom" />
</menu>